[gd_scene load_steps=7 format=3 uid="uid://c1fbcmsutoqlu"]

[ext_resource type="PackedScene" uid="uid://ua3l1s5sg3rh" path="res://art/ui/hud/slot.tscn" id="1_ld3uh"]
[ext_resource type="Texture2D" uid="uid://cv5frrjqo6vf7" path="res://art/ui/hud/Map.png" id="2_70ocq"]
[ext_resource type="Script" path="res://scenes/health_bar.gd" id="3_sd1to"]
[ext_resource type="PackedScene" uid="uid://doda71apgf4nf" path="res://art/ui/hud/heart.tscn" id="4_ollbi"]
[ext_resource type="Texture2D" uid="uid://1arhq80pqtv" path="res://art/ui/hud/pause button.png" id="5_i0hwn"]
[ext_resource type="Texture2D" uid="uid://22ox6qbbgjk6" path="res://art/ui/hud/paused.png" id="6_gc8ks"]

[node name="Hud" type="CanvasLayer"]

[node name="Hotbar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Slot" parent="Hotbar" instance=ExtResource("1_ld3uh")]
layout_mode = 0
offset_left = 536.0
offset_top = 560.0
offset_right = 552.0
offset_bottom = 576.0

[node name="Slot4" parent="Hotbar" instance=ExtResource("1_ld3uh")]
layout_mode = 0
offset_left = 616.0
offset_top = 560.0
offset_right = 632.0
offset_bottom = 576.0

[node name="Slot5" parent="Hotbar" instance=ExtResource("1_ld3uh")]
layout_mode = 0
offset_left = 696.0
offset_top = 560.0
offset_right = 712.0
offset_bottom = 576.0

[node name="Slot2" parent="Hotbar" instance=ExtResource("1_ld3uh")]
layout_mode = 0
offset_left = 456.0
offset_top = 560.0
offset_right = 472.0
offset_bottom = 576.0

[node name="Slot3" parent="Hotbar" instance=ExtResource("1_ld3uh")]
layout_mode = 0
offset_left = 376.0
offset_top = 560.0
offset_right = 392.0
offset_bottom = 576.0

[node name="Map" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Map"]
layout_mode = 0
offset_left = 949.0
offset_top = 16.0
offset_right = 1136.0
offset_bottom = 202.0
texture = ExtResource("2_70ocq")
stretch_mode = 4

[node name="Health_Bar" type="HFlowContainer" parent="."]
offset_left = 375.0
offset_top = 510.0
offset_right = 566.0
offset_bottom = 545.0
script = ExtResource("3_sd1to")

[node name="Heart1" parent="Health_Bar" instance=ExtResource("4_ollbi")]
position = Vector2(24, 15.9999)

[node name="Heart2" parent="Health_Bar" instance=ExtResource("4_ollbi")]
position = Vector2(60, 15.9999)

[node name="Heart3" parent="Health_Bar" instance=ExtResource("4_ollbi")]
position = Vector2(96, 15.9999)

[node name="Heart4" parent="Health_Bar" instance=ExtResource("4_ollbi")]
position = Vector2(132, 15.9999)

[node name="Heart5" parent="Health_Bar" instance=ExtResource("4_ollbi")]
position = Vector2(168, 15.9999)

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 42.0
offset_bottom = 42.0
scale = Vector2(3, 3)
toggle_mode = true
texture_normal = ExtResource("5_i0hwn")
texture_pressed = ExtResource("6_gc8ks")
stretch_mode = 4
